fix sort order of 'my results'